[gd_scene load_steps=3 format=2]

[ext_resource path="res://units/section/section.gd" type="Script" id=1]
[ext_resource path="res://units/section/ResourcesFlatIcon_57.png" type="Texture" id=2]

[node name="Node" type="Node2D"]

[node name="Empty_Section" type="TextureButton" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 240.0
margin_bottom = 240.0
rect_scale = Vector2( 0.125, 0.125 )
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_Balloon" type="Button" parent="Empty_Section"]
margin_left = -32.0
margin_top = -128.0
margin_right = 32.0
margin_bottom = -64.0
text = "Balloon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_1" type="Button" parent="Empty_Section"]
margin_left = 97.07
margin_top = -128.0
margin_right = 161.07
margin_bottom = -64.0
text = "Balloon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_2" type="Button" parent="Empty_Section"]
margin_left = 228.0
margin_top = -128.0
margin_right = 292.0
margin_bottom = -64.0
text = "Balloon"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Empty_Section" to="Empty_Section" method="_on_Section_pressed"]
[connection signal="pressed" from="Empty_Section/Option_Balloon" to="Empty_Section" method="_on_Option_Balloon_pressed"]
[connection signal="pressed" from="Empty_Section/Option_1" to="Empty_Section" method="_on_Option_pressed"]
[connection signal="pressed" from="Empty_Section/Option_2" to="Empty_Section" method="_on_Option_pressed"]
